# PersistentApps

b+tree/: .b+tree.c.swo  .b+tree.c.swp  CMakeCache.txt  CMakeLists.txt  Makefile  b+tree  b+tree.c  b+tree_amittai.c  b+tree_intel  b+tree_intel.c  b+tree_intel_appendonly.c  b+tree_intel_old.c  b+tree_intel_p  b+tree_intel_p.c  b+tree_intel_p_appendonly.c  b+tree_intel_p_old.c  b+tree_old.c  b+tree_p  b+tree_p.c  cmake_install.cmake  delete_b+tree.sh  run_btree.sh
hashmap/: .hashmap_pp.c.swp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  delete_files.sh  hashmap  hashmap.c  hashmap.h  hashmap_fp.c  hashmap_fp_perf.c  hashmap_fp_perf_appendonly.c  hashmap_pp.c  hashmap_pp_perf.c  hashmap_pp_perf_appendonly.c  result_hashmap_fp_perf_1.txt  result_hashmap_fp_perf_16B_1.txt  result_hashmap_fp_perf_16B_2.txt  result_hashmap_fp_perf_16B_4.txt  result_hashmap_fp_perf_2.txt  result_hashmap_fp_perf_32B_1.txt  result_hashmap_fp_perf_32B_2.txt  result_hashmap_fp_perf_32B_4.txt  result_hashmap_fp_perf_4.txt  result_hashmap_fp_perf_64B_1.txt  result_hashmap_fp_perf_64B_2.txt  result_hashmap_fp_perf_64B_4.txt  result_hashmap_pp_perf_1.txt  result_hashmap_pp_perf_16B_1.txt  result_hashmap_pp_perf_16B_2.txt  result_hashmap_pp_perf_16B_4.txt  result_hashmap_pp_perf_2.txt  result_hashmap_pp_perf_32B_1.txt  result_hashmap_pp_perf_32B_2.txt  result_hashmap_pp_perf_32B_4.txt  result_hashmap_pp_perf_4.txt  run_hashmap.sh  threads.h
intel/: CMakeCache.txt  CMakeLists.txt  Makefile  b+tree_intel  b+tree_intel.c  b+tree_intel_p  b+tree_intel_p.c  cmake_install.cmake  linkedlist  linkedlist_intel.c  linkedlist_intel_oldgold.c  linkedlist_intel_p.c  linkedlist_p  linkedlist_perf.c  linkedlist_perf_p.c  result_b+tree_p_perf_1.txt  result_b+tree_p_perf_1_16B.txt  result_b+tree_p_perf_1_32B.txt  result_b+tree_p_perf_2.txt  result_b+tree_p_perf_2_16B.txt  result_b+tree_p_perf_2_32B.txt  result_b+tree_p_perf_4.txt  result_b+tree_p_perf_4_16B.txt  result_b+tree_p_perf_4_32B.txt  result_b+tree_perf_1.txt  result_b+tree_perf_1_16B.txt  result_b+tree_perf_1_32B.txt  result_b+tree_perf_2.txt  result_b+tree_perf_2_16B.txt  result_b+tree_perf_2_32B.txt  result_b+tree_perf_4.txt  result_b+tree_perf_4_16B.txt  result_b+tree_perf_4_32B.txt  result_ll_perf_1.txt  result_ll_perf_16B_1.txt  result_ll_perf_16B_2.txt  result_ll_perf_16B_4.txt  result_ll_perf_16B_p_1.txt  result_ll_perf_16B_p_2.txt  result_ll_perf_16B_p_4.txt  (+14 more)
linkedlist/: .linkedlist_volatile.c.swp  .linkedlist_volatile_v2.c.swp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  delete_ll.sh  linkedlist  linkedlist.c  linkedlist_copyonflush  linkedlist_copyonflush.c  linkedlist_intel.c  linkedlist_perf.c  linkedlist_perf_appendonly.c  linkedlist_perf_p.c  linkedlist_perf_p_appendonly.c  linkedlist_persistent  linkedlist_persistent.c  linkedlist_persistent_intel.c  linkedlist_persistent_msync  linkedlist_persistent_msync.c  linkedlist_pp_msync  linkedlist_pp_msync.c  linkedlist_volatile_malloc  linkedlist_volatile_malloc.c  linkedlist_volatile_mallocall  linkedlist_volatile_mallocall.c  linkedlist_volatile_mmap  linkedlist_volatile_mmap.c  run.sh  run_ll.sh
trial_ds/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  delete_files.sh  result_16B.txt  result_32B.txt  result_64B.txt  result_8B.txt  result_freq_1.txt  run.sh  (+11 more)
